Avances en Implementación e Introducción

--- a/doc/LaTeX/text/BCI-invasivos.tex
+++ b/doc/LaTeX/text/BCI-invasivos.tex
@@ -2,6 +2,6 @@
 \markboth{\MakeUppercase{BCI Invasivos}}{}
 \addcontentsline{toc}{subsection}{BCI Invasivos}
 
-Los dispositivos BCI invasivos son implantados drectamente en el cerebro y tienen la más alta calidad de señales de los BCI. Estos dispositivos son usados para recuperar funciones de personas con parálisis. Los BCI invasivos son usados también para recuperar la vista conectando el cerebro a cámaras externas y para restaurar el uso de extremidades usando brazos y piernas robóticos controlados por el cerebro. Como todos los dispositivos que se encuentran instalados en la maeteria gris del cerebro este tipo de BI produce una caldad de señales muy alta pero son propensos a causar cicatrices en el tejido cerebral causando que las señales comienzen a volverse débiles o incluso la pérdida de las reacciones del cuerpo por contener un objeto desconocido en el cerebro\cite{invasiveBCI1}. \\
-En las ciencias de la visión los implantes en el cerebro han sido usados para tratar la seguera no congénita\footnote{Una enfermedad congénita es aquella que se manifiesta desde el nacimiento, ya sea por un transtorno ocurrido durante el desarrollo embrionario, durante el parto o como consecuencia de un defecto hereditario}. William Dobell es uno de los primeros científicos que vienen trabajando con una interfaz cerebro para restaurar la vista como una investigación privada. El implantó su primer prototipo en Jerry, un hombre que quedó ciego en su adultez en 1978. Él insertó un BCI de 68 electrodos en la corteza visual de Jerry y logró producir la sensasión  de ver una luz. En 2012 el experimento fué realizado en Jens Neumann donde Dobell utilizó un implante más sotisficado que permitió un mejor mapeo. Investigadores de la Universidad de Emory en Atlanta, dirigidos por Philip Kennedy y Roy Bakay fueron los primeros en instalar un implante en el cerebro de un ser humano que produce señales de alta calidad suficientes para estimular el movimiento\cite{invasiveBCI1}. \\
-Thomas Navin Lal et al. en su artículo \cite{invasiveBCI1} desarrollaron un BCI llamado Thought Translation Device (TTD) es cual usan para ayudar a comunicarse a acientes con par´alisis los cu´ales han perdido sus funciones cognitivas. Para poder usar el TTD los pacientes debieron aprender a regular a voluntad su Slow Cortical Potentials (SCP)\footnote{Se llaman SCP (o potenciales corticales lentos en español) a los cambios relacionados con los eventos de corriente continua lenta obtenidas con los EEG provenientes de los grandes conjuntos de c´elulas en la capa cortical superior\cite{SCP:Online}.}. El sistema entonces permite a su usuario escribir textos en la pantalla de una computadora o navegar en internet. El sistema sin embargo cuenta con dos desventajas: no todos los pacientes logran controlar su SCP adem´as la intensidad de la señal es un poco baja y a un usuario bien entrenado requiere aproximadamente 30 segundos para escribir un caracter. % insertar imagen del articulo
+Los dispositivos BCI invasivos son implantados directamente en el cerebro y tienen la más alta calidad de señales de los BCI. Estos dispositivos son usados para recuperar funciones de personas con parálisis. Los BCI invasivos son usados también para recuperar la vista conectando el cerebro a cámaras externas y para restaurar el uso de extremidades usando brazos y piernas robóticos controlados por el cerebro. Como todos los dispositivos que se encuentran instalados en la materia gris del cerebro este tipo de BI produce una calidad de señales muy alta pero son propensos a causar cicatrices en el tejido cerebral causando que las señales comiencen a volverse débiles o incluso la pérdida de las reacciones del cuerpo por contener un objeto desconocido en el cerebro\cite{invasiveBCI1}. \\
+En las ciencias de la visión los implantes en el cerebro han sido usados para tratar la ceguera no congénita\footnote{Una enfermedad congénita es aquella que se manifiesta desde el nacimiento, ya sea por un trastorno ocurrido durante el desarrollo embrionario, durante el parto o como consecuencia de un defecto hereditario}. William Dobell es uno de los primeros científicos que vienen trabajando con una interfaz cerebro para restaurar la vista como una investigación privada. El implantó su primer prototipo en Jerry, un hombre que quedó ciego en su adultez en 1978. Él insertó un BCI de 68 electrodos en la corteza visual de Jerry y logró producir la sensación  de ver una luz. En 2012 el experimento fué realizado en Jens Neumann donde Dobell utilizó un implante más sofisticado que permitió un mejor mapeo. Investigadores de la Universidad de Emory en Atlanta, dirigidos por Philip Kennedy y Roy Bakay fueron los primeros en instalar un implante en el cerebro de un ser humano que produce señales de alta calidad suficientes para estimular el movimiento\cite{invasiveBCI1}. \\
+Thomas Navin Lal et al. en su artículo \cite{invasiveBCI1} desarrollaron un BCI llamado Thought Translation Device (TTD) es cual usan para ayudar a comunicarse a pacientes con parálisis los cuáles han perdido sus funciones cognitivas. Para poder usar el TTD los pacientes debieron aprender a regular a voluntad su Slow Cortical Potentials (SCP)\footnote{Se llaman SCP (o potenciales corticales lentos en español) a los cambios relacionados con los eventos de corriente continua lenta obtenidas con los EEG provenientes de los grandes conjuntos de células en la capa cortical superior\cite{SCP:Online}.}. El sistema entonces permite a su usuario escribir textos en la pantalla de una computadora o navegar en internet. El sistema sin embargo cuenta con dos desventajas: no todos los pacientes logran controlar su SCP además la intensidad de la señal es un poco baja y a un usuario bien entrenado requiere aproximadamente 30 segundos para escribir un caracter. % insertar imagen del articulo
