Avance en Antecedentes

--- a/doc/LaTeX/bib/Bibliografia.bib
+++ b/doc/LaTeX/bib/Bibliografia.bib
@@ -121,7 +121,6 @@
   publisher={Citeseer}
 }
 
-
 @article{invasiveBCI2,
   title={Methods Towards Invasive Human Brian Computer Interfaces},
   author={Lal, Thomas Navin and Hinterberger, Thilo and Widman, Guido and Schr{\"o}der, Michael and Hill, Jeremy and Rosenstiel, Wolfgang and Elger, Christian and Sch{\"o}lkopf, Bernhard and Birbaumer, Niels},
@@ -141,3 +140,26 @@
   year = {2015},
   howpublished = {\url{https://biofeedbackfederationofeurope.blogspot.mx/2014/04/introduction-to-slow-cortical.html}}
 }  
+
+@article{birbaumer2006breaking,
+  title={Breaking the silence: brain--computer interfaces (BCI) for communication and motor control},
+  author={Birbaumer, Niels},
+  journal={Psychophysiology},
+  volume={43},
+  number={6},
+  pages={517--532},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{asimbaya2014diseno,
+  title={Dise{\~n}o e implementaci{\'o}n de un prototipo brain computer interface (BCI), para la manipulaci{\'o}n de una pinza rob{\'o}tica utilizando comunicaci{\'o}n Bluetooth.},
+  author={Asimbaya Molina, Javier Danilo and Suasnavas Tip{\'a}n, Juan Andr{\'e}s},
+  year={2014}
+}
+
+@article{gordo2009interfaz,
+  title={Interfaz BCI de altas prestaciones basada en la detecci{\'o}n y procesamiento de la actividad cerebral (BCI-DEPRACAP)},
+  author={Gordo, Miguel {\'A}ngel L{\'o}pez},
+  year={2009}
+}
